--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button {
     display: flex;
     flex-direction: row;
     width: 80%;
-    height: 100%;
+    /* height: 100%; */
     align-items: center;
     justify-content: space-evenly;
 }
@@ -157,13 +157,14 @@ button {
 }
 
 #canvas {
-    width: auto;
-    height: 35%;
+    /*     width: 80%; */
+    height: 70%;
 }
 
 #canvas2 {
-    width: auto;
-    height: 35%;
+    width: 1px;
+    height: 1px;
+    display: none;
 }
 
 img {
